# coursework

./: .gitignore
AI标书/作业提交/共同部分/Rust课程/张卓茵/lesson-01/: Cargo.toml  main.rs
AI标书/作业提交/共同部分/Rust课程/张卓茵/lesson-01/src/: main.rs
AI标书/作业提交/共同部分/Rust课程/张卓茵/lesson-02/: Cargo.toml
AI标书/作业提交/共同部分/Rust课程/张卓茵/lesson-02/src/: main.rs
AI标书/作业提交/共同部分/Rust课程/张卓茵/lesson-03/: Cargo.toml  config.txt
AI标书/作业提交/共同部分/Rust课程/张卓茵/lesson-03/src/: main.rs
AI标书/作业提交/共同部分/Rust课程/张卓茵/lesson-04/: Cargo.toml
AI标书/作业提交/共同部分/Rust课程/张卓茵/lesson-04/src/: main.rs
AI标书/作业提交/共同部分/Rust课程/李俊成/: RUST课程作业.md
AI标书/作业提交/共同部分/Rust课程/赵程程/ai-client/: .env  .env.example  Cargo.toml
AI标书/作业提交/共同部分/Rust课程/赵程程/ai-client/examples/: demo.rs
AI标书/作业提交/共同部分/Rust课程/赵程程/ai-client/src/: lib.rs
AI标书/作业提交/共同部分/Rust课程/赵程程/rust3/: rust3.rs
AI标书/作业提交/共同部分/Rust课程/赵程程/rust3/cmd_config_demo/: Cargo.toml  config.txt
AI标书/作业提交/小组研究/agent智能组/: readme
AI标书/作业提交/小组研究/知识检索小组/程迪宏/RAG实战-lesson02-个人任务/: RAG实战-lesson02-个人任务.md
AI标书/作业提交/小组研究/知识检索小组/程迪宏/lesson01/RAG实战-lesson01-个人任务/: RAG实战-lesson01-个人任务.md
AI标书/作业提交/小组研究/知识检索小组/程迪宏/lesson01/lesson01-demo/任务二/: Cargo.toml  main.rs
AI标书/作业提交/小组研究/知识沉淀引擎小组/lesson-01/: Cypher脚本.txt  测试版Cypher脚本.txt
AI标书/作业提交/小组研究/知识沉淀引擎小组/lesson-02/hexdump_neo4j/: Cargo.toml
AI标书/作业提交/小组研究/规则匹配实战/肖佳昊/lesson-01/: homework.md  rules.yaml
AI标书/课程资料/共同部分/Rust课程/: README.md
AI标书/课程资料/共同部分/Rust课程/代码/lesson-03/: config.example
AI标书/课程资料/小组研究/图数据库实战/: lesson-01-graph-foundations.md
AI老师/个人介绍/: 张卓茵.txt  杜恩泽
AI老师/模块文档/: 王佳雯-M5 AI备课模块.md
(+11 files in other folders)
